--- a/examples/app.html
+++ b/examples/app.html
@@ -1,12 +1,12 @@
-<html>
+<!DOCTYPE html><html>
 
 	<head>
 
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-		<script type="text/javascript" src="../jquery.history.js"></script>
+		<script src="https://yeikos.googlecode.com/files/jquery.history.js"></script>
 
-		<script type="text/javascript">
+		<script>
 
 			$(function() {
 
